--- a/handlebars-print.css
+++ b/handlebars-print.css
@@ -5,10 +5,44 @@ body {
   font-size: .8rem;
 }
 
-.title {
-  color: green;
+.text-dark {
+  color: #212529;
 }
 
+.text-primary {
+  color: #0d6efd;
+}
+
+.text-secondary {
+  color: #6c757d;
+}
+
+.text-success {
+  color: #198754;
+}
+
+.text-info {
+  color: #0dcaf0;
+}
+
+.text-warning {
+  color: #ffc107;
+}
+
+.text-danger {
+  color: #dc3545;
+}
+
+.text-light {
+  color: #f8f9fa;
+}
+
+
+
+
+/* ################################ */
+/* ######### Border Style ######### */
+/* ################################ */
 .border {
   border: 1px solid #000;
 }
@@ -29,6 +63,13 @@ body {
   border-bottom: 1px solid #000;
 }
 
+
+
+
+
+/* ################################# */
+/* ######### Padding Style ######### */
+/* ################################# */
 .p-0 {
   padding: 0;
 }
@@ -45,14 +86,21 @@ body {
   padding: 3rem;
 }
 
-.pd-left {
+.p-start-1 {
   padding-left: 1rem;
 }
 
-.pd-right {
+.p-end-1 {
   padding-right: 1rem;
 }
 
+
+
+
+
+/* ################################# */
+/* ######### Screen Style ########## */
+/* ################################# */
 @media screen {
   body {
     background: #e0e0e0
