--- a/handlebars-print.css
+++ b/handlebars-print.css
@@ -5,6 +5,13 @@ body {
   font-size: .8rem;
 }
 
+
+
+
+/* ################################ */
+/* ######### Text Style ######### */
+/* ################################ */
+/* text color */
 .text-dark {
   color: #212529;
 }
@@ -35,6 +42,11 @@ body {
 
 .text-light {
   color: #f8f9fa;
+}
+
+/* text alignment */
+.text-center {
+  text-align: center;
 }
 
 
@@ -92,6 +104,20 @@ body {
 
 .p-end-1 {
   padding-right: 1rem;
+}
+
+
+
+
+/* ############################### */
+/* ######### Size Style ########## */
+/* ############################### */
+.w-50 {
+  width: 50%;
+}
+
+.w-100 {
+  width: 100%;
 }
 
 
